syntax = "proto3";

package j5.realm.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "j5/state/v1/metadata.proto";

option go_package = "github.com/pentops/realms/gen/j5/realm/v1/realm_j5pb";

message TenantKeys {
  option (j5.ext.v1.psm).entity_name = "tenant";

  string tenant_id = 1 [
    (buf.validate.field).string.pattern = '^[0-9A-Za-z]{22}$',
    (j5.ext.v1.key).primary_key = true
  ];

  string realm_id = 2 [(buf.validate.field).string.uuid = true];

  string tenant_type = 3 [
    (buf.validate.field).string.pattern = "^[a-z0-9-]+$",
    (j5.ext.v1.key) = {} /* mark it as a natural key */
  ];
}

message TenantStateData {
  TenantSpec spec = 1;
}

message TenantState {
  j5.state.v1.StateMetadata metadata = 1 [(buf.validate.field).required = true];

  TenantKeys keys = 2 [
    (j5.ext.v1.field).message.flatten = true,
    (buf.validate.field).required = true
  ];

  TenantStatus status = 3 [(buf.validate.field).required = true];

  TenantStateData data = 4 [(buf.validate.field).required = true];
}

enum TenantStatus {
  TENANT_STATUS_UNSPECIFIED = 0;
  TENANT_STATUS_ACTIVE = 1;
}

message TenantSpec {
  string name = 1;

  // Key-value pairs of metadata interpreted in the context of the realm and
  // tenant-type within the realm
  map<string, string> metadata = 10;
}

message TenantEvent {
  j5.state.v1.EventMetadata metadata = 1 [(buf.validate.field).required = true];

  TenantKeys keys = 2 [
    (j5.ext.v1.field).message.flatten = true,
    (buf.validate.field).required = true
  ];

  TenantEventType event = 3 [(buf.validate.field).required = true];
}

message TenantEventType {
  oneof type {
    Created created = 1;
    Updated updated = 2;
  }

  message Created {
    TenantSpec spec = 1;
  }

  message Updated {
    TenantSpec spec = 1;
  }
}
